Se separa el controlador de medallas

--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/medallasController.js"></script>
 
     
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
