Se crea el controlador de Perfil

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/medallasController.js"></script>
+    <script src="js/miPerfilController.js"></script>
 
     
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
