Se termina la parte de eventos, medallas y metas, sólo queda la parte de espacios deportivos y validar varios campos de la aplicación

--- a/www/index.html
+++ b/www/index.html
@@ -23,9 +23,12 @@
     <script src="js/medallasController.js"></script>
     <script src="js/miPerfilController.js"></script>
     <script src="js/buscarEventoController.js"></script>
-    
+    <script src="js/especialistasController.js"></script>
+    <script src="js/datosPerfilController.js"></script>
+    <script src="js/metasController.js"></script>
+    <script src="js/nuevaMetaController.js"></script>
+    <script src="js/detallesEventoController.js"></script>
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
-    
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
