Se agregan las imagenes, el mapa y se termina la parte de eventos. Se comienza a corregir las metas

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,8 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+    <!--<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyA_IpEhDlZ07ovUzQAoR3lIPjf2CRxx5c4&sensor=true"></script>-->
+
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
