--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,12 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="cordova.js"></script>
-    <!--<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyA_IpEhDlZ07ovUzQAoR3lIPjf2CRxx5c4&sensor=true"></script>-->
+
 
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -18,6 +19,7 @@
     -->
 
     <script src="js/app.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_IpEhDlZ07ovUzQAoR3lIPjf2CRxx5c4&sensor=false"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
